--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
       padding: 10px;
       font-size: 23px;
       color: white;
-      border:4px;
+      border:7px;
       background-color:purple;
+      border-color: black;
     }
 
     @media (min-width: 992px) {
