--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -24,7 +24,7 @@
         Lunch Checker</h1>
         <p>
           <label ng-for="foodString">Enter food items: </label>
-          <input type="text" ng-model="itemString" ng-class="{ok: resultOk, notOk: resultOk == false}">
+          <input type="text" ng-model="itemString" ng-class="{ok: resultOk, notOk: resultOk == false}" placeholder="list with comma separation">
           <button ng-click="checkItems();">Check if too much</button>
         </p>
         <p>
